new tests, more bugs quashed

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@ whitepaper/uniond-whitepaper.aux
 whitepaper/uniond-whitepaper.log
 whitepaper/uniond-whitepaper.pdf
 whitepaper/uniond-whitepaper.toc
-
+node_modules
 
